[package]
name        = "minimax-proxy"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.96"
authors     = ["audacioustux <contact@audacioustux.com>"]
license     = "MIT"
repository  = "https://github.com/audacioustux/minimax-proxy"
publish     = false
description = "Multi-provider Codex proxy: routes OpenAI Responses natively and translates MiniMax Chat Completions"

[[bin]]
name = "minimax-proxy"
path = "src/main.rs"

[lints.rust]
unstable_features = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[lints.clippy]
correctness = { level = "deny", priority = 1 }
suspicious  = { level = "deny", priority = 1 }
complexity  = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
cargo       = { level = "warn", priority = -1 }
unwrap_used             = "warn"
expect_used             = "warn"
wildcard_imports        = "warn"
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata   = "allow"
future_not_send         = "allow"
redundant_pub_crate     = "allow"

[dependencies]
axum              = { version = "0.8",  features = ["json", "macros"] }
tokio             = { version = "1",    features = ["full"] }
reqwest           = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"
bytes             = "1"
futures-util      = "0.3"
tokio-stream      = { version = "0.1", features = ["sync"] }
regex             = "1"
rand              = "0.9"
base64            = "0.22"
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy           = "0.15"
tower-http        = { version = "0.6",  features = ["cors", "trace"] }
indexmap          = "2"
http              = "1"
tower             = "0.5"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
